examples/aws/aws-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: 'juice-balancer-ingress'
  namespace: 'default'
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: juice-balancer-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: 'juice-balancer'
              servicePort: 3000
